Fix: 비활성화된 게시판에 접근할 수 없도록 개선